style: fixed date - name - link spacing

--- a/components/organization/EventCard/EventCard.module.css
+++ b/components/organization/EventCard/EventCard.module.css
@@ -18,7 +18,7 @@
 }
 
 .dateLoc {
-  margin-bottom: 7px;
+  margin-bottom: 14px;
   font-family: Epilogue;
   font-style: normal;
   font-weight: 600;
@@ -32,7 +32,7 @@
   font-weight: 600;
   font-size: 26.05px;
   line-height: 125%;
-  margin-bottom: 7px;
+  margin-bottom: 16px;
   color: #694f95;
 }
 
